refactor:기능구현 재건